--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,92 +1,93 @@
 * {
-	font-family: "Source Code Pro Semibold";
-	font-size: 13px;
-    min-height: 0;
+    border: none;
+    font-family: JetBrainsMono Nerd Font, Font Awesome, Roboto, Arial, sans-serif;
+    font-size: 13px;
+    color: #ffffff;
+    border-radius: 20px;
 }
 
+window {
+	/*font-weight: bold;*/
+}
 window#waybar {
-	background: @theme_base_color;
-	color: #fdf6e3;
+    background: rgba(0, 0, 0, 0);
 }
-
-#custom-right-arrow-dark,
-#custom-left-arrow-dark {
-	color: #1a1a1a;
+/*-----module groups----*/
+.modules-right {
+	background-color: rgba(0,43,51,0.85);
+    margin: 2px 10px 0 0;
 }
-#custom-right-arrow-light,
-#custom-left-arrow-light {
-	color: @theme_base_color;
-	background: #1a1a1a;
+.modules-center {
+	background-color: rgba(0,43,51,0.85);
+    margin: 2px 0 0 0;
 }
-
-#custom-updates {
-    padding: 0px 10px;
-	color: #C58F8E;
+.modules-left {
+    margin: 2px 0 0 5px;
+	background-color: rgba(0,119,179,0.6);
 }
-
-#custom-updates,
-#workspaces,
-#clock.1,
-#clock.2,
-#clock.3,
-#pulseaudio,
-#backlight,
-#disk,
-#memory,
-#cpu,
-#temperature,
-#battery,
-#tray {
-	background: #1a1a1a;
-}
-
+/*-----modules indv----*/
 #workspaces button {
-	padding: 0 2px;
-	color: #fdf6e3;
-}
-#workspaces button.focused {
-	color: #268bd2;
+    padding: 1px 5px;
+    background-color: transparent;
 }
 #workspaces button:hover {
-	box-shadow: inherit;
-	text-shadow: inherit;
-}
-#workspaces button:hover {
-	background: #1a1a1a;
-	border: #1a1a1a;
-	padding: 0 3px;
+    box-shadow: inherit;
+	background-color: rgba(0,153,153,1);
 }
 
-#pulseaudio {
-	color: #78A7E8;
-}
-#backlight {
-	color: #b58900;
-}
-#memory {
-	color: #D39484;
-}
-#temperature {
-	color: #b58900;
-}
-#cpu {
-	color: #6c71c4;
-}
-#battery {
-	color: #B08197;
-}
-#disk {
-	color: #B89AAE;
+#workspaces button.focused {
+	background-color: rgba(0,43,51,0.85);
 }
 
 #clock,
-#disk,
-#pulseaudio,
-#backlight,
-#memory,
+#battery,
 #cpu,
+#memory,
 #temperature,
-#battery {
-	padding: 0 10px;
+#network,
+#pulseaudio,
+#custom-media,
+#tray,
+#mode,
+#custom-power,
+#custom-menu,
+#idle_inhibitor {
+    padding: 0 10px;
 }
+#mode {
+    color: #cc3436;
+    font-weight: bold;
+}
+#custom-power {
+    background-color: rgba(0,119,179,0.6);
+    border-radius: 100px;
+    margin: 5px 5px;
+    padding: 1px 1px 1px 6px;
+}
+/*-----Indicators----*/
+#idle_inhibitor.activated {
+    color: #2dcc36;
+}
+#pulseaudio.muted {
+    color: #cc3436;
+}
+#battery.charging {
+    color: #2dcc36;
+}
+#battery.warning:not(.charging) {
+	color: #e6e600;
+}
+#battery.critical:not(.charging) {
+    color: #cc3436;
+}
+#temperature.critical {
+    color: #cc3436;
+}
+/*-----Colors----*/
+/*
+ *rgba(0,85,102,1),#005566 --> Indigo(dye)
+ *rgba(0,43,51,1),#002B33 --> Dark Green 
+ *rgba(0,153,153,1),#009999 --> Persian Green 
+ *
+ */
 
